fixed console span error from duplicate span as well as fixed the responsiveness of the webpage to fit on mobile

--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -8,12 +8,9 @@
     /* font-family: 'Poppins', sans-serif; */
 }
 
-.custom-navbar{
-    /* height: 80%; */
-}
 .resume-button {
     background: linear-gradient(315deg, #44b09e 0%, #b5cedf 74%);
     border: none;  
-    margin-right: 3%;
+    /* margin-right: 3%; */
     border-radius: 70%;  
 }
